{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 28,
  "lineage": "af84e6a3-9baa-bbd5-17e9-129748b3ee49",
  "resources": [
    {
      "module": "module.infra",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:580951440591:vpc/vpc-49e3ed2f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-c8fccaa3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-e4374f82",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-49e3ed2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b03505c9",
            "owner_id": "580951440591",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:580951440591:instance/i-033fd63b30c7fee88",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "instance_profile",
            "id": "i-033fd63b30c7fee88",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "instance_pub_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-074ae430e7024d52e",
            "private_dns": "ip-172-31-32-98.eu-west-1.compute.internal",
            "private_ip": "172.31.32.98",
            "public_dns": "ec2-34-242-3-180.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.3.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a2dca0a083ea2462",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "dev20200124094151380700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1b26a341",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cef0c0d1260540b3"
            ]
          },
          "dependencies": [
            "module.infra.aws_iam_instance_profile.instance_profile",
            "module.infra.aws_key_pair.ec2_key",
            "module.infra.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:580951440591:security-group/sg-0cef0c0d1260540b3",
            "description": "dev-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0cef0c0d1260540b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 36666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 36666
              }
            ],
            "name": "dev20200124094151380700000001",
            "name_prefix": "dev",
            "owner_id": "580951440591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-instance",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-49e3ed2f"
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1749814131",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cef0c0d1260540b3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.infra.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-36666",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 36666,
            "id": "sgrule-136046982",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cef0c0d1260540b3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 36666,
            "type": "ingress"
          },
          "dependencies": [
            "module.infra.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2515734062",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cef0c0d1260540b3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.infra.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}